# Agentic-Chatbot

./: README.md  agent_notebook.ipynb  langgraph.json  pyproject.toml
.devcontainer/: devcontainer.json
all_projects/advanced_agent/: agent.py  requirements.txt
all_projects/advanced_agent/utils/: nodes.py  state.py  tools.py
all_projects/my_agent/: agent.py
all_projects/my_agent/utils/: nodes.py  state.py  tools.py
docs/: faq.md
my_agent/: agent.py  requirements.txt
