[tool.poetry]
name = "agentic_chatbot"
version = "0.0.1"
description = "Agentic Chatbot"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain-community = "^0.2.12"
langgraph = "^0.2.14"
langchain-core = "^0.2.34"
langchain-openai = "^0.1.22"
langchain_ollama = "^0.1.3"
langchain_groq = "^0.1.10"
langchain-anthropic = "^0.1.23"
langchain-mistralai = "^0.1.12"
scikit-learn = "^1.5.1"
tavily-python = "^0.4.0"

[tool.poetry.group.docs.dependencies]
langgraph = { path = "libs/langgraph/", develop = true }
langgraph-checkpoint = { path = "libs/checkpoint/", develop = true }
langgraph-checkpoint-sqlite = { path = "libs/checkpoint-sqlite", develop = true }
langgraph-checkpoint-postgres = { path = "libs/checkpoint-postgres", develop = true }
langgraph-sdk = {path = "libs/sdk-py", develop = true}
mkdocs = "^1.6.0"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.4"
mkdocs-jupyter = "^0.24.7"
mkdocs-redirects = "^1.2.1"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-rss-plugin = "^1.13.1"
mkdocs-git-committers-plugin-2 = "^2.3.0"
mkdocs-material = {extras = ["imaging"], version = "^9.5.27"}
markdown-include = "^0.8.1"
markdown-callouts = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
