[tool.poetry]
name = "agentic_chatbot"
version = "0.0.1"
description = "Agentic Chatbot"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
langchain-community = "^0.3.0"
langgraph = "^0.2.50"
langgraph-checkpoint = "^2.0.0"
langgraph-checkpoint-sqlite = "^2.0.0"
langchain-core = "^0.3.0"
langchain-openai = "^0.2.0"
langchain_ollama = "^0.2.0"
langchain_groq = "^0.2.0"
scikit-learn = "^1.5.1"
tavily-python = "^0.4.0"
langchain_experimental = "^0.3.0"
tabulate = "^0.9.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.4"
mkdocs-jupyter = "^0.24.7"
mkdocs-redirects = "^1.2.1"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-rss-plugin = "^1.13.1"
mkdocs-git-committers-plugin-2 = "^2.3.0"
mkdocs-material = {extras = ["imaging"], version = "^9.5.27"}
markdown-include = "^0.8.1"
markdown-callouts = "^0.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
